--- a/Øljeopardy/wwwroot/css/Main.css
+++ b/Øljeopardy/wwwroot/css/Main.css
@@ -15,7 +15,7 @@ body {
   background-attachment: fixed;
   background-size: auto 120%; }
 
-h1, h3 {
+h1, h2, h3, h4 {
   text-align: center; }
 
 hr {
