--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -198,3 +198,10 @@ hr {
     text-align: center;
     margin-bottom: 10px;
 }
+
+.highscore-container {
+    background-color: rgba(255,255,255,0.4);
+    border-radius: 4px;
+    border: solid;
+    border-width: 1px;
+}
