--- a/Øljeopardy/wwwroot/css/Main.css
+++ b/Øljeopardy/wwwroot/css/Main.css
@@ -165,3 +165,9 @@ hr {
 .category-select-container {
   text-align: center;
   margin-bottom: 10px; }
+
+.highscore-container {
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  border: solid;
+  border-width: 1px; }
