--- a/Øljeopardy/Views/Home/Categories.cshtml
+++ b/Øljeopardy/Views/Home/Categories.cshtml
@@ -10,27 +10,28 @@
             <strong>@ViewData["Message"]</strong>
         </div>
     }
-    <div>
-        <form asp-controller="Category" asp-action="Edit">
-            <div class="row">
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <select class="form-control" asp-for="ChosenCategoryGuid"
-                                asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
-                            <option selected disabled>Vælg en kategori</option>
-                        </select>
+    @if (@Model.CategoryList != null && Model.CategoryList.Count() > 0)
+    {
+        <div>
+            <form asp-controller="Category" asp-action="Edit">
+                <div class="row">
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <select class="form-control" asp-for="ChosenCategoryGuid"
+                                    asp-items="@(new SelectList(Model.CategoryList, "Id", "Name"))" class="dropdown">
+                                <option selected disabled>Vælg en kategori</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row button-container">
-                <input type="button" class="menubutton" value="Rediger kategori" onClick="ValidateForm(this.form, 'Categories')" />
-            </div>
-        </form>
-    </div>
-
-
+                <div class="row button-container">
+                    <input type="button" class="menubutton" value="Rediger kategori" onClick="ValidateForm(this.form, 'Categories')" />
+                </div>
+            </form>
+        </div>
+    }
     <div class="row button-container">
-        <form><button asp-controller="Category" asp-action="Create" class="menubutton">Ny kategori</button></form>
+        <form><button asp-controller="Category" asp-action="Create" class="menubutton">Opret kategori</button></form>
     </div>
 </div>
 </div>
