--- a/Øljeopardy/Views/Shared/Navbar.cshtml
+++ b/Øljeopardy/Views/Shared/Navbar.cshtml
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><i class="fa fa-home navbar-icon" aria-hidden="true"></i>Øljeopardy</a>
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><i class="fa fa-home navbar-icon" aria-hidden="true"></i>Øljeopardy 1.0α</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
