--- a/Øljeopardy/Views/Shared/Navbar.cshtml
+++ b/Øljeopardy/Views/Shared/Navbar.cshtml
@@ -10,15 +10,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand"><i class="fa fa-home navbar-icon" aria-hidden="true"></i>Øljeopardy 1.0α</a>
+            <a onclick="loadMain()" class="navbar-brand"><i class="fa fa-home navbar-icon" aria-hidden="true"></i>Øljeopardy 1.0α</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a asp-area="" asp-controller="Home" asp-action="Rules"><i class="fa fa-legal navbar-icon" aria-hidden="true"></i> Regler</a></li>
+                <li><a onclick="loadRules()"><i class="fa fa-legal navbar-icon" aria-hidden="true"></i> Regler</a></li>
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <li><a asp-area="" asp-controller="Home" asp-action="Categories"><i class="fa fa-comments navbar-icon" aria-hidden="true"></i> Kategorier</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Game"><i class="fa fa-gamepad navbar-icon" aria-hidden="true"></i> Spil</a></li>
+                    <li><a onclick="loadCategories()"><i class="fa fa-comments navbar-icon" aria-hidden="true"></i> Kategorier</a></li>
+                    <li><a onclick="loadGame()"><i class="fa fa-gamepad navbar-icon" aria-hidden="true"></i> Spil</a></li>
                 }
             </ul>
             @await Html.PartialAsync("_LoginPartial")
