Fixed layout on category page

--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -106,11 +106,15 @@ hr {
 .arrow-container-up {
     padding-top: 20px;
     font-size: 2em;
+    margin-right: -10px;
+    right: 15px;
 }
 
 .arrow-container-down {
     padding-top: 5px;
     font-size: 2em;
+    margin-right: -10px;
+    right: 15px;
 }
 
 .arrow-button {
