--- a/Øljeopardy/Views/Category/Category.cshtml
+++ b/Øljeopardy/Views/Category/Category.cshtml
@@ -152,4 +152,5 @@
     <div class="row button-container" style="margin-top: 30px;">
         <button class="menubutton" onclick="submitCategory()">Gem</button>
     </div>
+    <div style="height: 30px;"></div>
 </div>
