--- a/Øljeopardy/wwwroot/css/Main.css
+++ b/Øljeopardy/wwwroot/css/Main.css
@@ -175,3 +175,21 @@ hr {
   border-radius: 4px;
   border: solid;
   border-width: 1px; }
+
+.category-list-item {
+  max-width: 600px;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  border: solid;
+  border-width: 1px;
+  padding: 10px 17px 10px 10px;
+  margin-bottom: 5px; }
+
+.a-button {
+  color: black;
+  text-decoration: none; }
+
+.vertical-align {
+  display: flex;
+  align-items: center; }
