--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -92,6 +92,30 @@ hr {
     margin-right: auto;
 }
 
+.smallbutton {
+    border: none;
+    font-family: inherit;
+    cursor: pointer;
+    width: 65px;
+    height: 30px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 700;
+    outline: none;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    font-size: 12px;
+    background: #368015;
+    color: #fff;
+    box-shadow: 0 3px 2px #0D3E0F;
+    border-radius: 5px;
+    -webkit-appearance: none;
+    margin-left: auto;
+    margin-right: -5px;
+    margin-bottom: 4px;
+}
+
 .textbutton {
     text-align: center;
     margin-top: 10px;
@@ -208,6 +232,7 @@ hr {
     border-radius: 4px;
     border: solid;
     border-width: 1px;
+    box-shadow: 3px 3px 2px #999966;
 }
 
 .category-list-item {
@@ -219,6 +244,7 @@ hr {
     border-width: 1px;
     padding: 10px 17px 10px 10px;
     margin-bottom: 5px;
+    box-shadow: 3px 3px 2px #999966;
 }
 
 .a-button {
