--- a/Øljeopardy/Views/Shared/_Layout.cshtml
+++ b/Øljeopardy/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link rel="icon" href="favicon.ico">
         <script src="https://use.fontawesome.com/6174e98e58.js"></script>
     </environment>
 </head>
