--- a/Øljeopardy/Views/Home/Index.cshtml
+++ b/Øljeopardy/Views/Home/Index.cshtml
@@ -35,7 +35,10 @@
                             </h4>
                         }
                         <div class="row button-container">
-                            <button type="button" onclick="loadAddGame()" class="menubutton">Opret nyt spil</button>
+                            <button type="button" onclick="loadAddGame()" class="menubutton has-spinner">
+                                <span class="spinner"><i class="fa fa-refresh fa-spin fa-lg"></i></span>
+                                <span class="btn-text">Opret nyt spil</span>
+                            </button>
                         </div>
                     }
                     else
