--- a/Øljeopardy/Views/Home/Game.cshtml
+++ b/Øljeopardy/Views/Home/Game.cshtml
@@ -238,6 +238,20 @@ else
                         @Model.LatestCategoryChooserName har valgt @(Model.CategoryOwnerName)s kategori @Model.ChosenCategoryName til @Model.ChosenAnswerQuestionPoints point.
                     </h4>
                 }
+                if (Model.HasPressedEatYourNote)
+                {
+                    <h4>Du har trykket Æd den selv.</h4>
+                }
+                else
+                {
+                    <div class="row button-container" id="EatYourNoteButton">
+                        <button type="button" onclick="eatYourNote()" class="menubutton">Æd den selv!</button>
+                    </div>
+                    <div id="EatYourNoteMessage" style="display: none;">
+                        <div style="height: 6px;"></div>
+                        <h4>Du har trykket Æd den selv.</h4>
+                    </div>
+                }
 
             }
         }
