Added function to leave game

--- a/Øljeopardy/Views/Home/Index.cshtml
+++ b/Øljeopardy/Views/Home/Index.cshtml
@@ -49,6 +49,12 @@
                         <div class="row button-container">
                             <button type="button" onclick="loadGame()" class="menubutton">Gå til spillet</button>
                         </div>
+                        <div class="row button-container">
+                            <button type="button" onClick="leaveGame(this)" class="menubutton has-spinner">
+                                <span class="spinner"><i class="fa fa-refresh fa-spin fa-lg"></i></span>
+                                <span class="btn-text">Forlad spillet</span>
+                            </button>
+                        </div>
                     }
                 }
                 else
